updated research topics

--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2014-10-10 09:32:00"> 
+<meta name="date" content="2014-10-16 13:21:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">(616) 450-0749         </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">138 Village at Vanderbilt</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">October 10, 2014           </td>
+class="td11">October 16, 2014           </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
@@ -86,6 +86,10 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-4000"></a>Selected Research Topics</h4>
    <ul class="itemize0">
+   <li class="itemize">High energy astroparticle physics.
+   </li>
+   <li class="itemize">Neutrino anisotropy at the highest energies as seen by IceCube.
+   </li>
    <li class="itemize">Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array,
    and EUSO.
    </li>
@@ -97,14 +101,14 @@ class="cmmi-10">pp </span>scattering at LHC energies.
    <li class="itemize">Matching Weinberg&#8217;s Higgs portal to <span 
 class="cmmi-10">N</span><sub><span 
 class="cmmi-7">eff</span></sub> measurements. </li></ul>
-<!--l. 78--><p class="noindent" >
+<!--l. 80--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-5000"></a>Language Skills</h4>
    <ul class="itemize0">
    <li class="itemize"><span class="LATEX">L<span class="A">A</span><span class="TEX">T<span 
 class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot,
    java, html, and javascript. </li></ul>
-<!--l. 84--><p class="noindent" >
+<!--l. 86--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-6000"></a>Teaching</h4>
    <ul class="itemize0">
@@ -112,7 +116,9 @@ class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEM
    </li>
    <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school
    levels, 2005-Present. </li></ul>
-<!--l. 90--><p class="noindent" >
+                                                                                         
+                                                                                         
+<!--l. 92--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-7000"></a>Professional Societies</h4>
    <ul class="itemize0">
