--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2015-07-07 20:04:00"> 
+<meta name="date" content="2015-08-27 10:30:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -25,16 +25,16 @@ id="TBL-1-5"></colgroup><tr
  style="vertical-align:baseline;" id="TBL-1-1-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-1"  
 class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-2"  
 class="td11">(616) 450-0749         </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
-class="td11">138 Village at Vanderbilt</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
+class="td11">1036 Heritage Hill Dr Apt B</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">July 7, 2015                 </td>
+class="td11">August 27, 2015            </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
 href="mailto:peterbd1@gmail.com" ><span 
 class="cmtt-10">peterbd1@gmail.com</span></a></td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-3"  
-class="td11">Nashville TN 37212       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-4"  
+class="td11">Naperville IL 60563            </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-4"  
 class="td11">Website: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-5"  
 class="td11"><a 
 href="http://peterdenton.github.io" ><span 
