--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2015-08-27 10:30:00"> 
+<meta name="date" content="2015-10-13 10:29:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">(616) 450-0749         </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">1036 Heritage Hill Dr Apt B</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">August 27, 2015            </td>
+class="td11">October 13, 2015           </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
@@ -90,6 +90,8 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-4000"></a>Selected Research Topics</h4>
    <ul class="itemize0">
+   <li class="itemize">Neutrino oscillations in perturbation theory.
+   </li>
    <li class="itemize">High energy astroparticle physics.
    </li>
    <li class="itemize">Neutrino anisotropy at the highest energies as seen by IceCube.
@@ -105,7 +107,7 @@ class="cmmi-10">pp </span>scattering at LHC energies.
    <li class="itemize">Matching Weinberg&#8217;s Higgs portal to <span 
 class="cmmi-10">N</span><sub><span 
 class="cmmi-7">eff</span></sub> measurements. </li></ul>
-<!--l. 80--><p class="noindent" >
+<!--l. 81--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-5000"></a>Language Skills</h4>
    <ul class="itemize0">
@@ -114,7 +116,7 @@ class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEM
    java, html, and javascript. </li></ul>
                                                                                          
                                                                                          
-<!--l. 86--><p class="noindent" >
+<!--l. 87--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-6000"></a>Teaching</h4>
    <ul class="itemize0">
@@ -122,7 +124,7 @@ class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEM
    </li>
    <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school
    levels, 2005-Present. </li></ul>
-<!--l. 92--><p class="noindent" >
+<!--l. 93--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-7000"></a>Professional Societies</h4>
    <ul class="itemize0">
