--- a/CV.html
+++ b/CV.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2015-11-02 23:48:00"> 
+<meta name="date" content="2015-11-08 09:30:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">(616) 450-0749         </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">1036 Heritage Hill Dr Apt B</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">November 2, 2015          </td>
+class="td11">November 8, 2015          </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
@@ -43,16 +43,16 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-1000"></a>Research Experience</h4>
    <ul class="itemize0">
-   <li class="itemize">Fermilab  Graduate  Student  Research  Program  in  Theoretical  Physics  with  Stephen  Parke,  August
+   <li class="itemize">Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August
    2015-August 2016.
    </li>
    <li class="itemize">DOE funded research assistant with Thomas J.&#x00A0;Weiler at Vanderbilt University, Spring 2011-Fall 2015.
    </li>
    <li class="itemize">Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
    </li>
-   <li class="itemize">Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
+   <li class="itemize">Lee Teng Internship with Tanaji Sen at Fermilab, Summer 2009.
    </li>
-   <li class="itemize">Bonner Labs at Rice University with Bill Llope, Summer 2008. </li></ul>
+   <li class="itemize">Bonner Labs with Bill Llope at Rice University, Summer 2008. </li></ul>
 <!--l. 48--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-2000"></a>Education</h4>
