--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2016-07-04 12:48:00"> 
+<meta name="date" content="2016-07-05 13:42:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
 <!--l. 40--><p class="noindent" ><span 
-class="cmr-17x-x-120">Dr.</span><span 
-class="cmr-17x-x-120">&#x00A0;Peter B.</span><span 
-class="cmr-17x-x-120">&#x00A0;Denton</span>
+class="cmr-17x-x-120">Peter B.</span><span 
+class="cmr-17x-x-120">&#x00A0;Denton, Ph.D.</span>
 <div class="tabular"> <table id="TBL-1" class="tabular" 
 cellspacing="0" cellpadding="0" rules="groups" 
 ><colgroup id="TBL-1-1g"><col 
@@ -28,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">(616) 450-0749         </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">1036 Heritage Hill Dr Apt B</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">July 4, 2016                 </td>
+class="td11">July 5, 2016                 </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
@@ -58,7 +57,7 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-2000"></a>Education</h4>
    <ul class="itemize0">
-   <li class="itemize">Ph.D. Physics, Vanderbilt University August 2016.
+   <li class="itemize">Ph.D. Physics, Vanderbilt University, August 2016.
    </li>
    <li class="itemize">B.S. Physics, Rice University, May 2010.
    </li>
