--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2017-04-17 12:31:00"> 
+<meta name="date" content="2017-04-17 13:33:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -43,14 +43,14 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-1000"></a>Research Experience</h4>
    <ul class="itemize0">
-   <li class="itemize">Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016-Present.
+   <li class="itemize">Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016&#8211;Present.
    </li>
    <li class="itemize">Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August
-   2015-August 2016.
+   2015&#8211;August 2016.
    </li>
-   <li class="itemize">DOE funded research assistant with Thomas J.&#x00A0;Weiler at Vanderbilt University, Spring 2011-Fall 2015.
+   <li class="itemize">DOE funded research assistant with Thomas J.&#x00A0;Weiler at Vanderbilt University, Spring 2011&#8211;Fall 2015.
    </li>
-   <li class="itemize">Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
+   <li class="itemize">Research assistant with Sokrates Pantelides at Vanderbilt University, Summer&#8211;Fall 2010.
    </li>
    <li class="itemize">Lee Teng Internship with Tanaji Sen at Fermilab, Summer 2009.
    </li>
@@ -118,19 +118,19 @@ class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEM
 <h4 class="likesubsectionHead"><a 
  id="x1-7000"></a>Service</h4>
    <ul class="itemize0">
-   <li class="itemize">Journal reviewer for Nuclear Physics B </li></ul>
+   <li class="itemize">Reviewer for Nuclear Physics B </li></ul>
 <!--l. 106--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Teaching</h4>
    <ul class="itemize0">
-   <li class="itemize">Teaching assistant at Vanderbilt University, Fall 2010-Spring 2015.
+   <li class="itemize">Teaching assistant at Vanderbilt University, Fall 2010&#8211;Spring 2015.
    </li>
    <li class="itemize">Teaching assistant for the Physics Department at Rice University, Fall 2009.
    </li>
-   <li class="itemize">Writing consultant at Rice University, 2007-2010.
+   <li class="itemize">Writing consultant at Rice University, 2007&#8211;2010.
    </li>
    <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school
-   levels, 2005-2015. </li></ul>
+   levels, 2005&#8211;2015. </li></ul>
 <!--l. 114--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Professional Societies</h4>
