--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2017-04-17 13:33:00"> 
+<meta name="date" content="2017-04-17 13:35:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -68,7 +68,7 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-3000"></a>Physics Schools</h4>
    <ul class="itemize0">
-   <li class="itemize">Erice International School of Subnuclear Physics (ISSP), June 2016.
+   <li class="itemize">Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
    </li>
    <li class="itemize">Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014. </li></ul>
                                                                                          
