--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2017-05-30 15:42:00"> 
+<meta name="date" content="2017-09-05 11:26:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+45 71 49 29 40       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Gernersgade 35, 1 th</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">May 30, 2017               </td>
+class="td11">September 5, 2017         </td>
 </tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
@@ -59,11 +59,9 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
 <h4 class="likesubsectionHead"><a 
  id="x1-2000"></a>Research Interests</h4>
    <ul class="itemize0">
-   <li class="itemize">Standard and BSM neutrino oscillations theory.
+   <li class="itemize">SM and BSM neutrino theory.
    </li>
-   <li class="itemize">High energy astroparticle physics.
-   </li>
-   <li class="itemize">Cosmic ray and neutrino anisotropy searches. </li></ul>
+   <li class="itemize">High energy astroparticle physics: UHECRs, neutrinos, anisotropies. </li></ul>
 <!--l. 69--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-3000"></a>Education</h4>
@@ -102,7 +100,7 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
    <li class="itemize">The Robert T.&#x00A0;Lagemann Award of $1,000 for highest academic achievement by a first-year graduate
    student, awarded April 2011.
    </li>
-   <li class="itemize">&#8220;Topping-up&#8221; McMinn Fellowship of $5,000 a year of five years, awarded March 2010. </li></ul>
+   <li class="itemize">McMinn Fellowship of $5,000 a year of five years, awarded March 2010. </li></ul>
 <!--l. 96--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-6000"></a>Language Skills</h4>
@@ -123,10 +121,14 @@ class="E">E</span>X</span></span>, beamer, python, matplotlib, C++, ROOT, MATHEM
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Students</h4>
    <ul class="itemize0">
+   <li class="itemize">Klaes Møller, University of Copenhagen, master&#8217;s student, 2017&#8211;present.
+   </li>
+   <li class="itemize">Anna Suliga, University of Copenhagen, master&#8217;s student, 2017&#8211;present.
+   </li>
    <li class="itemize">Mia-Louise Nielsen, University of Copenhagen, bachelor&#8217;s thesis: <span 
 class="cmti-10">The origin of IceCube neutrinos</span>, 2017.
    </li></ul>
-<!--l. 113--><p class="noindent" >
+<!--l. 115--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Teaching</h4>
    <ul class="itemize0">
@@ -138,7 +140,7 @@ class="cmti-10">The origin of IceCube neutrinos</span>, 2017.
    </li>
    <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school
    levels, 2005&#8211;2015. </li></ul>
-<!--l. 121--><p class="noindent" >
+<!--l. 123--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-10000"></a>Professional Societies</h4>
    <ul class="itemize0">
