--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2018-05-15 17:42:00"> 
+<meta name="date" content="2018-07-08 17:07:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+45 71 49 29 40       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Gernersgade 35, 1 th</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">May 15, 2018               </td></tr><tr  
+class="td11">July 8, 2018                 </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -110,7 +110,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-7000"></a>Service</h4>
  <ul class="itemize0">
- <li class="itemize">Reviewer for Nuclear Physics B.
+ <li class="itemize">Reviewer for JHEP and Nuclear Physics B.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;Present. </li></ul>
                                                                                            
