--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2018-07-26 18:09:00"> 
+<meta name="date" content="2018-09-21 14:52:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -27,7 +27,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+45 71 49 29 40       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Gernersgade 35, 1 th</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">July 26, 2018                </td></tr><tr  
+class="td11">September 21, 2018       </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -119,7 +119,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Service</h4>
  <ul class="itemize0">
- <li class="itemize">Reviewer for JHEP and Nuclear Physics B.
+ <li class="itemize">Reviewer for JHEP, PRD, and Nuclear Physics B.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;Present. </li></ul>
 <!--l. 123--><p class="noindent" >
@@ -128,7 +128,8 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <ul class="itemize0">
  <li class="itemize">Klaes Møller, University of Copenhagen, master&#8217;s student, 2017&#8211;present.
  </li>
- <li class="itemize">Anna Suliga, University of Copenhagen, master&#8217;s student, 2017&#8211;present.
+ <li class="itemize">Anna Suliga, University of Copenhagen, master&#8217;s thesis: <span 
+class="cmti-10">Diffuse supernova neutrino background</span>, 2017&#8211;2018.
  </li>
  <li class="itemize">Mia-Louise Nielsen, University of Copenhagen, bachelor&#8217;s thesis: <span 
 class="cmti-10">Star-forming galaxies as sources of high</span>
