--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="originator" content="TeX4ht (http://www.cse.ohio-state.edu/~gurari/TeX4ht/)"> 
 <!-- html,fn-in --> 
 <meta name="src" content="CV.tex"> 
-<meta name="date" content="2018-10-11 11:24:00"> 
+<meta name="date" content="2018-12-09 10:55:00"> 
 <link rel="stylesheet" type="text/css" href="CV.css"> 
 </head><body 
 >
@@ -24,16 +24,16 @@ id="TBL-1-4"><col
 id="TBL-1-5"></colgroup><tr  
  style="vertical-align:baseline;" id="TBL-1-1-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-1"  
 class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-2"  
-class="td11">+45 71 49 29 40       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
-class="td11">Gernersgade 35, 1 th</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
+class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
+class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">October 11, 2018           </td></tr><tr  
+class="td11">December 9, 2018          </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
 href="mailto:peterbd1@gmail.com" ><span 
 class="cmtt-10">peterbd1@gmail.com</span></a></td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-3"  
-class="td11">Copenhagen K 1319 </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-4"  
+class="td11">Upton, NY 11973 </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-4"  
 class="td11">Website: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-5"  
 class="td11"><a 
 href="http://peterdenton.github.io" ><span 
@@ -121,7 +121,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Service</h4>
  <ul class="itemize0">
- <li class="itemize">Reviewer for JHEP, PRD, and Nuclear Physics B.
+ <li class="itemize">Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;2018. </li></ul>
 <!--l. 124--><p class="noindent" >
@@ -130,7 +130,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <ul class="itemize0">
  <li class="itemize">Interacted with high school students via APS&#8217;s <span 
 class="cmti-10">Adopt-A-Physicist </span>program, 2018 Fall semester. </li></ul>
-<!--l. 130--><p class="noindent" >
+<!--l. 129--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-10000"></a>Students</h4>
  <ul class="itemize0">
@@ -147,7 +147,7 @@ class="cmti-10">Diffuse supernova neutrino background</span>, 2017&#8211;2018.
 class="cmti-10">Star-forming galaxies as sources of high</span>
  <span 
 class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at University of Copenhagen. </li></ul>
-<!--l. 139--><p class="noindent" >
+<!--l. 138--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-11000"></a>Teaching</h4>
  <ul class="itemize0">
@@ -161,7 +161,7 @@ class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at Univ
  2005&#8211;2015. </li></ul>
                                                                                            
                                                                                            
-<!--l. 147--><p class="noindent" >
+<!--l. 146--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-12000"></a>Professional Societies</h4>
  <ul class="itemize0">
