--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">February 15, 2019         </td></tr><tr  
+class="td11">March 29, 2019             </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -130,7 +130,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <ul class="itemize0">
  <li class="itemize">Convener for Brookhaven Forum 2019 and DPF 2019.
  </li>
- <li class="itemize">Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
+ <li class="itemize">Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, and Nuclear Physics B.
  </li>
  <li class="itemize">BNL HET Lunch Discussion chair, 2019&#8211;Present.
  </li>
