--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">March 29, 2019             </td></tr><tr  
+class="td11">April 20, 2019              </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -128,6 +128,8 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Service</h4>
  <ul class="itemize0">
+ <li class="itemize">International Organizing Committee for Neutrino 2020.
+ </li>
  <li class="itemize">Convener for Brookhaven Forum 2019 and DPF 2019.
  </li>
  <li class="itemize">Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, and Nuclear Physics B.
@@ -135,15 +137,15 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <li class="itemize">BNL HET Lunch Discussion chair, 2019&#8211;Present.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;2018. </li></ul>
-<!--l. 128--><p class="noindent" >
+<!--l. 129--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Outreach</h4>
  <ul class="itemize0">
  <li class="itemize">Interacted with high school students via APS&#8217;s <span 
 class="cmti-10">Adopt-A-Physicist </span>program, 2018 Fall semester. </li></ul>
-<!--l. 133--><p class="noindent" >
+<!--l. 134--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
- id="x1-10000"></a>Students</h4>
+ id="x1-10000"></a>Students Advised/Mentored</h4>
  <ul class="itemize0">
  <li class="itemize">Klaes  Møller,  University  of  Copenhagen,  master&#8217;s  thesis:  <span 
 class="cmti-10">Constraining  Astrophysical  Parameters  with</span>
@@ -160,7 +162,7 @@ class="cmti-10">Star-forming galaxies as sources of high</span>
 class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at University of Copenhagen. </li></ul>
                                                                                            
                                                                                            
-<!--l. 142--><p class="noindent" >
+<!--l. 143--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-11000"></a>Teaching</h4>
  <ul class="itemize0">
@@ -172,7 +174,7 @@ class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at Univ
  </li>
  <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels,
  2005&#8211;2015. </li></ul>
-<!--l. 150--><p class="noindent" >
+<!--l. 151--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-12000"></a>Professional Societies</h4>
  <ul class="itemize0">
