--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">November 25, 2019        </td></tr><tr  
+class="td11">January 2, 2020            </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -87,26 +87,26 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
  </li>
  <li class="itemize">The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
  </li>
- <li class="itemize">PITT PACC travel award of $300 to attend Pheno &#8217;16, awarded April 2016.
+ <li class="itemize">PITT PACC travel award to attend Pheno &#8217;16, awarded April 2016.
  </li>
- <li class="itemize">Vanderbilt Dissertation Enhancement Grant of $2,000 to attend the Theoretical Advanced Study Institute:
- Amplitudes For Colliders in June 2014, awarded April 2014.
+ <li class="itemize">Vanderbilt Dissertation Enhancement Grant of $2,000 to attend the Theoretical Advanced Study Institute,
+ awarded April 2014.
  </li>
  <li class="itemize">Subsidy of $1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014,
  awarded April 2014.
  </li>
- <li class="itemize">Division of Particles &amp; Fields travel grant of $120 to the APS April 2013 meeting, awarded March 2013.
+ <li class="itemize">Division of Particles &amp; Fields travel grant to the APS April 2013 meeting, awarded March 2013.
  </li>
  <li class="itemize">The Robert T.&#x00A0;Lagemann Award of $1,000 for highest academic achievement by a first-year graduate student,
  awarded April 2011.
  </li>
- <li class="itemize">McMinn Fellowship of $5,000 a year for five years, awarded March 2010. </li></ul>
-<!--l. 102--><p class="noindent" >
+ <li class="itemize">McMinn Fellowship of $25,000 over five years, awarded March 2010. </li></ul>
+<!--l. 101--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-5000"></a>Collaborations</h4>
  <ul class="itemize0">
  <li class="itemize">Giant Radio Array for Neutrino Detection (GRAND), 2017&#8211;Present. </li></ul>
-<!--l. 107--><p class="noindent" >
+<!--l. 106--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-6000"></a>Physics Schools</h4>
  <ul class="itemize0">
@@ -117,14 +117,14 @@ class="cmtt-10">peterdenton.github.io</span></a></td></tr></table>
  <li class="itemize">Introduction to accelerator physics, United States Particle Accelerator School, June 2009. </li></ul>
                                                                                            
                                                                                            
-<!--l. 114--><p class="noindent" >
+<!--l. 113--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-7000"></a>Software</h4>
  <ul class="itemize0">
  <li class="itemize">c++,  mpi,  openmp,  python,  matplotlib,  <span class="LATEX">L<span class="A">A</span><span class="TEX">T<span 
 class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATICA,
  MATLAB, FORTRAN, gnuplot, java, html, javascript, &#x2026;</li></ul>
-<!--l. 120--><p class="noindent" >
+<!--l. 119--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Service</h4>
  <ul class="itemize0">
@@ -144,13 +144,13 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <li class="itemize">BNL HET lunch discussion organizer, 2019&#8211;Present.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;2018. </li></ul>
-<!--l. 132--><p class="noindent" >
+<!--l. 131--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Outreach</h4>
  <ul class="itemize0">
  <li class="itemize">Interacted with high school students via APS&#8217;s <span 
 class="cmti-10">Adopt-A-Physicist </span>program, 2018 Fall semester. </li></ul>
-<!--l. 137--><p class="noindent" >
+<!--l. 136--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-10000"></a>Students Advised/Mentored</h4>
  <ul class="itemize0">
@@ -169,7 +169,7 @@ class="cmti-10">Diffuse supernova neutrino background</span>, 2017&#8211;2018.
 class="cmti-10">Star-forming galaxies as sources of high</span>
  <span 
 class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at University of Copenhagen. </li></ul>
-<!--l. 146--><p class="noindent" >
+<!--l. 145--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-11000"></a>Teaching</h4>
  <ul class="itemize0">
@@ -181,7 +181,7 @@ class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at Univ
  </li>
  <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels,
  2005&#8211;2015. </li></ul>
-<!--l. 154--><p class="noindent" >
+<!--l. 153--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-12000"></a>Professional Societies</h4>
  <ul class="itemize0">
