--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">February 27, 2020         </td></tr><tr  
+class="td11">April 26, 2020              </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -136,10 +136,11 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  </li>
  <li class="itemize">Judge for the 12th International Neutrino Summer School at Fermilab 2019.
  </li>
- <li class="itemize">Chair for Pheno 2019.
+ <li class="itemize">Chair for Pheno 2019, 2020.
  </li>
- <li class="itemize">Reviewer for PRL, JHEP, PRD, Physics Letters B, European Physical Journal C, Nuclear Physics B, MNRAS,
- and Universe.
+ <li class="itemize">Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters
+ B, European Physical Journal C, Journal of Mathematical Physics, Nuclear Physics B, Monthly Notices of
+ the Royal Astronomical Society, and Universe.
  </li>
  <li class="itemize">BNL HET seminar organizer, 2019&#8211;Present.
  </li>
