--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">April 26, 2020              </td></tr><tr  
+class="td11">June 4, 2020                 </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -128,7 +128,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-8000"></a>Service</h4>
  <ul class="itemize0">
- <li class="itemize">Snowmass neutrino oscillations subtopic convener 2020&#8211;2021.
+ <li class="itemize">Snowmass neutrino oscillations subtopic convener and neutrino theory liason 2020&#8211;2021.
  </li>
  <li class="itemize">International Organizing Committee for Neutrino 2020.
  </li>
